$Id: History,v 1.212 2002-12-11 16:11:44 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

11th December 2002  John Allison  (vis-V04-01-10)
- Fix for SUN-CC warnings: AddThis hides the virtual function...
- Fix memory leak in RayTracer.
- Fixed /vis/scene/add/trajectories command.
- Some fixes in HepRep.

4th December 2002  Makoto Asai (vis-V04-01-09)
- Migration to new G4ApplicationState

27th November 2002  John Allison  (vis-V04-01-08)
- Fixes to HepRep - see History file.
- Added RegisterGraphicsSystem (new G4HepRep) in MyVisManager.cc.
- Fix (removal) of ambiguous G4VVisCommand::GetNewDoubleValue.
- Added /vis/viewer/set/globalMarkerScale.
- Improved algorithm of CompareForKernelVisit on OpenGL and OpenInventor.

21st November 2002  Gabriele Cosmo  (vis-V04-01-07)
- Corrections to HepRep module to allow porting on egcs compiler
  (M.Donszelmann).